updated basic card using prisma using mysql and mongodb
